<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <LinearLayout
            android:id="@+id/lnUser"
            style="@style/LinearLayout.CardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                android:src="@drawable/ic_empty_profile_v2"
                app:civ_border_color="#30AAAAAA"
                app:civ_border_width="6dp" />

            <TextView
                android:id="@+id/tvUsername"
                style="@style/TextView.SemiBold.Shadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:maxLines="1"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                tools:text="\@shabelnik" />


            <TextView
                android:id="@+id/tvFullName"
                style="@style/TextView.SemiBold.Shadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="Данил Шабельник" />

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGroup"
            style="@style/MaterialCardView.Common"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#e3f2fd"
            app:layout_constraintEnd_toEndOf="@id/center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnUser">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/tvCardGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_with_corners"
                    android:backgroundTint="#1976d2"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextView.CardHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:paddingVertical="5dp"
                        android:text="@string/profile_card_header_group"
                        app:drawableStartCompat="@drawable/ic_group" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvGroupName"
                    style="@style/TextView.CardValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardGroup"
                    tools:text="ПОВТ-1-20" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardRating"
            style="@style/MaterialCardView.Common"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f1f8e9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/center"
            app:layout_constraintTop_toBottomOf="@id/lnUser">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/tvCardRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_with_corners"
                    android:backgroundTint="#2e7d32"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextView.CardHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:paddingVertical="5dp"
                        android:text="@string/profile_card_header_rating"
                        app:drawableStartCompat="@drawable/ic_trophy" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvRatingValue"
                    style="@style/TextView.CardValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardRating"
                    tools:text="0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAchieve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#fff3e0"
            style="@style/MaterialCardView.Common"

            app:layout_constraintEnd_toEndOf="@id/center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardGroup">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/tvCardAchieve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_with_corners"
                    android:backgroundTint="#ed6c02"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextView.CardHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:paddingVertical="5dp"
                        android:text="@string/profile_card_header_achieve"
                        app:drawableStartCompat="@drawable/ic_achieve" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAchieveValue"
                    style="@style/TextView.CardValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardAchieve"
                    tools:text="0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardScore"
            style="@style/MaterialCardView.Common"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFE7E0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/center"
            app:layout_constraintTop_toBottomOf="@id/cardRating">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/tvCardScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_with_corners"
                    android:backgroundTint="#e53838"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextView.CardHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:paddingVertical="5dp"
                        android:text="@string/profile_card_header_points"
                        app:drawableStartCompat="@drawable/ic_bolt" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvScoreValue"
                    style="@style/TextView.CardValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardScore"
                    tools:text="0" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/tvCoursesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/profile_rv_courses_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardAchieve" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCoursers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvCoursesText"
            tools:itemCount="2"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_course" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>